--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,28 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
+	id 'java-library'
+	id 'eclipse'
+	id 'maven'
 }
 
-group = 'batch'
+group = 'jp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
-//	runtimeOnly('com.h2database:h2:1.4.200')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'jp.prototype:prototype-common:0.0.1-SNAPSHOT'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.15'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+	//runtimeOnly "com.h2database:h2:1.4.200"
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
