--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #spring.batch.initialize-schema=never
-spring.batch.initialize-schema=always
+spring.batch.initialize-schema=never
+spring.jpa.hibernate.ddl-auto=none
 spring.main.allow-bean-definition-overriding=true
 #debug=true
 logging.file=D:/applog/prototype-batch.log
@@ -11,11 +12,4 @@ spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.show-sql=true
-  
-#The first property tells Hibernate to collect inserts in batches of four. 
-#The order_inserts property tells Hibernate to take the time to group inserts by entity, creating larger batches.
-spring.jpa.properties.hibernate.jdbc.batch_size=2000
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.batch_versioned_data=true
-#spring.jpa.properties.hibernate.generate_statistics=true
+
